# aboba

./: .gitignore  README.md  pyproject.toml
scr/: setup.py
scr/api/auth/: auth.py  permissions.py
scr/api/v1/: urls.py  utils.py
scr/api/v1/admin/: views.py
scr/api/v1/admin/serializers/: modelSerializers.py
scr/api/v1/catalog/: permissions.py  views.py
scr/api/v1/catalog/serializers/: modelSerializer.py  requestSerializer.py
scr/api/v1/feedback/: views.py
scr/api/v1/support_chat/: consumers.py  views.py
scr/api/v1/user_auth/: views.py
scr/api/v1/user_auth/templates/: base.html
scr/api/v1/user_profile/: views.py
scr/api/v1/userauth/: views.py
scr/apps/catalog/: admin.py  models.py
scr/apps/catalog/migrations/: 0001_initial.py  0002_good_image.py  0002_initial.py  0003_alter_good_image.py  0003_good_category.py  0003_good_has_seen.py  0004_alter_good_image.py  0004_good_income.py  0005_alter_good_image.py  0005_remove_order_destination.py  0006_good_have_bought.py  0006_visitsperweek.py  0007_visitsperweek_good.py
scr/apps/feedback/: models.py
scr/apps/feedback/migrations/: 0001_initial.py
scr/apps/user_auth/: apps.py  models.py
scr/apps/user_auth/migrations/: 0001_initial.py  0002_customuser_is_seller.py
scr/apps/userauth/: models.py
scr/apps/userauth/migrations/: 0001_initial.py
scr/config/: asgi.py  settings.py  urls.py
scr/config/static/js/: catalog.js  create-good.js  edit-good.js  main.js
scr/config/static/style/: style.css  style.scss
scr/config/templates/: base.html
scr/config/templates/sections/: header.html
(+27 files in other folders)
